export const snapshot = {};

snapshot[`postcss plugin 1`] = `2`;

snapshot[`postcss plugin 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".css",
      pageType: "asset",
    },
  ],
}
`;

snapshot[`postcss plugin 3`] = `
{
  content: "::root {
  --color: #333;
  --background: #fff;
  --font-family: sans-serif;
}
.text {
  font-family: var(--font-family)
}
.text p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
  }
",
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
  },
}
`;

snapshot[`postcss plugin 4`] = `
{
  content: ".text {
  font-family: var(--font-family)
}
.text p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
  }
",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
  },
}
`;

snapshot[`postcss plugin without includes 1`] = `2`;

snapshot[`postcss plugin without includes 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".css",
      pageType: "asset",
    },
  ],
}
`;

snapshot[`postcss plugin without includes 3`] = `
{
  content: '@import "variables.css";
@import "./text.css";
',
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
  },
}
`;

snapshot[`postcss plugin without includes 4`] = `
{
  content: ".text {
  font-family: var(--font-family)
}
.text p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
  }
",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
  },
}
`;
